@@ -1,3 +1,11 @@
+development
+- New mode "version" to write the jar's version number to stdout
+- Changes to "counts-to-wiggle" mode to
+  - Write at most one entry per resolution-sized window of data (averaging the data in that window)
+  - Not write data past the end of the size of the chromosome (which is possible with resolution > 1)
+- New "counts-to-bedgraph" mode which is similar to "counts-to-wiggle" but writes the
+  data in "bedgraph" format, which is another format the Genome Browser accepts.
+
 1.2
  compact-alignment-to-annotation-counts mode:
   - Added chi square test statistic and associated FDR adjusted stat. Chi-square statistics support multi-group comparisons.
